# cavalier

./: COPYING  README.md  cavalier.doap  io.github.fsobolev.Cavalier.json  meson.build
build-aux/: python3-glcontext.json  python3-moderngl.json
data/: io.github.fsobolev.Cavalier.appdata.xml.in  io.github.fsobolev.Cavalier.desktop.in  io.github.fsobolev.Cavalier.gschema.xml  io.github.fsobolev.Cavalier.metainfo.xml.in  meson.build
data/css/: cavalier.css
data/icons/: meson.build
po/: CREDITS.json  LINGUAS  POTFILES  README.md  cavalier.pot  de.po  es.po  fr.po  it.po  meson.build  nl.po  pt_BR.po  ru.po
src/: cava.py  cavalier.gresource.xml  cavalier.in  draw.py  draw_functions.py  drawing_area.py  gl_area.py  main.py  meson.build  preferences_window.py  settings.py  settings_import_export.py  shortcuts.py  shortcuts_dialog.ui  translator_credits.py.in  window.py
